public/styles.css
:root {
  --line-width: 55ch;
}

body {
  width: 100vw;
  margin: 0 0 20px 0;
}

main {
  margin: 36px 16px 0 16px;
  display: flex;
  flex-direction: column;
  align-items: center;
}

h1 {
  border-top: 2px solid black;
  padding-top: 16px;
}

p, h1, h4 {
  font-family: 'Charter', Palatino, serif;
  font-kerning: normal;
}

h1 {
  font-variant: small-caps;
  letter-spacing: 2px;
}

h4 {
  font-style: italic;
  font-size: 16px;
  font-weight: 200;
}

h4:before {
  font-style: normal;
  content: "~ ";
}

p, pre {
  line-height: 1.3em;
}

p {
  font-size: 18px;
  text-align: justify;
  hyphens: auto; 
  -webkit-hyphens: auto; 
}

p:first-of-type {
  margin-top: 40px;
}

pre {
  font-size: 16px;
  padding-left: 2ch;
  border-left: solid 1px lightgrey;
  overflow-x: scroll;
  margin: 30px auto;
}

a {
  text-decoration: none;
  color: black;
}

p a {
  text-decoration: underline dotted;
  -webkit-text-decoration: underline dotted;
}

a:hover {
  background-color: lightgrey;
}

figure {
  margin: 20px 0;
  padding: 0 0;
  display: flex;
  flex-direction: column;
  align-items: center;
}

figure > img {
  width: var(--line-width);
  max-width: 100%;
  margin-bottom: 10px;
}

figcaption {
  font-size: 15px;
  margin-top: 15px;
  font-style: italic;
}

footer {
  text-align: center;
}

footer > * {
  margin: 0 10px;
}

#tr {
  text-align: center;
}

.article {
  max-width: var(--line-width);
}

blockquote .author {
  text-align: right;
}

blockquote {
  margin: 20px 0 20px 0;
  padding-left: 40px;
}

.author:before {
  content: "~ ";
}

